# technopark

./: .gitignore  README.md  requirements.txt
Algorithms/Term 2/2_Plane/: CMakeLists.txt  commands.txt  main.cpp  test.txt
Algorithms/Term 2/2_Plane/tests/: test_crew_members.cpp  test_passengers.cpp  test_plane.cpp
Algorithms/Term 2/2_Plane/units/: crew_members.cpp  crew_members.hpp  passengers.cpp  passengers.hpp  plane.cpp  plane.hpp  unit.cpp  unit.hpp
HW1/: lecture1_hw.ipynb
HW2/: HW2 Back propagation for MNIST.ipynb
HW3/: HW3_CNN.ipynb  README.MD
HW5/: HW5.ipynb
HW9/: ASR_hw_1.ipynb
ML/DZ1/: HW1.ipynb  Визуал.ipynb
ML/DZ2/: HW2.ipynb
ML/DZ3_all_cups/: Current_best.csv  Current_best_merged.csv  TFD_MNB.csv  baseline.ipynb  final_NSFW.ipynb  ml_baseline.csv  my_librery.py  my_ml.ipynb  review_classification.ipynb  simple_baseline.csv  test_prepared_data.ipynb  word_cloud.py
ML/DZ4_claster/: output.csv
ML/DZ5_real_estate/: DZ5_real_estate.ipynb
NN/: requirements.txt
NN/HW10/: 1_my_whisp_small.csv  2_whisp_largev3_post_proc.csv  3_whisp_largev3_text_digits.csv  ASR_hw_2.ipynb  baseline.csv  results_whisper_largev3-turbo.pkl
NN/HW11/: WGAN_homework.ipynb
NN/HW12/: HW_12_Diffusion.ipynb
NN/HW3/: HW3_CNN.ipynb
NN/HW4/: HW4.ipynb
NN/HW6/: HW6.ipynb
NN/HW8/: HW_transformers.ipynb
NN/HW9/: ASR_hw_1.ipynb
python/PythonCourse/: CЗ3-1.py  ДЗ1-1.py  ДЗ3-1.py  ДЗ4-1.py  СЗ-1А.py  СЗ-1В.py  СЗ10-2.py  СЗ10-3.py  СЗ11-2.py  СЗ11-3.py  СЗ12-2.py  СЗ13-2.py  СЗ13-3.py  СЗ14-2.py  СЗ14-3.py  СЗ2-2.py  СЗ2-3.py  СЗ3-3.py  СЗ4-2.py  СЗ4-3.py  (+10 more)
(+105 files in other folders)
